k8s/nginx/client.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-v1-19
  namespace: schlep
  labels:
    app: schlep
    role: client
    nginx/version: v1.19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schlep
      role: client
      nginx/version: v1.19
  template:
    metadata:
      labels:
        app: schlep
        role: client
        nginx/version: v1.19
      # annotations:
      #   linkerd.io/inject: enabled
      #   config.linkerd.io/proxy-log-level: linkerd=debug,h2=debug,info
      #   config.linkerd.io/proxy-log-http-headers: insecure
      #   prometheus.io/scrape: "true"
      #   prometheus.io/path: /metrics
      #   prometheus.io/port: "4191"
    spec:
      containers:
        - name: main
          image: ghcr.io/olix0r/schlep:v0.5.3
          args:
            - --log=schlep=debug,info
            - --log-format=json
            - client
            - --grpc
            - --rate=1
            - --sink
            - --sink-lifetime=300,600,3600
            - --data=100000,500000,1000000
            - --sleep=0.01,0.1,1.0
            - nginx-v1-19:8080
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-v1-25
  namespace: schlep
  labels:
    app: schlep
    role: client
    nginx/version: v1.25
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schlep
      role: client
      nginx/version: v1.25
  template:
    metadata:
      labels:
        app: schlep
        role: client
        nginx/version: v1.25
      # annotations:
      #   linkerd.io/inject: enabled
      #   config.linkerd.io/proxy-log-level: linkerd=debug,h2=debug,info
      #   config.linkerd.io/proxy-log-http-headers: insecure
      #   prometheus.io/scrape: "true"
      #   prometheus.io/path: /metrics
      #   prometheus.io/port: "4191"
    spec:
      containers:
        - name: main
          image: ghcr.io/olix0r/schlep:v0.5.3
          args:
            - --log=schlep=debug,info
            - --log-format=json
            - client
            - --grpc
            - --rate=1
            - --sink
            - --sink-lifetime=300,600,3600
            - --data=100000,500000,1000000
            - --sleep=0.01,0.1,1.0
            - nginx-v1-25:8080
...
