k8s/nginx/nginx.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: schlep
  labels:
    app: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: grpc
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 8080
      targetPort: 8080
...
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-v1-19
  namespace: schlep
  labels:
    app: nginx
    version: v1.19
spec:
  type: LoadBalancer
  selector:
    app: nginx
    version: v1.19
  ports:
    - name: grpc
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 8080
      targetPort: 8080
...
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-v1-25
  namespace: schlep
  labels:
    app: nginx
    version: v1.25
spec:
  type: LoadBalancer
  selector:
    app: nginx
    version: v1.25
  ports:
    - name: grpc
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 8080
      targetPort: 8080
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1-19
  namespace: schlep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1.19
  template:
    metadata:
      labels:
        app: nginx
        version: v1.19
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.10
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: nginx
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1-25
  namespace: schlep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1.25
  template:
    metadata:
      labels:
        app: nginx
        version: v1.25
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: nginx
...
