k8s/nginx/server.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: schlep
  labels:
    app: schlep
    role: server
spec:
  type: LoadBalancer
  selector:
    app: schlep
    role: server
  ports:
    - name: http
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 8080
      targetPort: 8080
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  namespace: schlep
  labels:
    app: schlep
    role: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schlep
      role: server
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/proxy-log-level: linkerd=debug,h2=debug,info
        # config.linkerd.io/proxy-log-http-headers: insecure
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "4191"
      labels:
        app: schlep
        role: server
    spec:
      containers:
        - name: main
          image: ghcr.io/olix0r/schlep:v0.5.3
          args:
            - --log=schlep=debug,info
            - --log-format=json
            - server
            - --config=/sink.json
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /sink.json
              subPath: sink.json
      volumes:
        - name: config
          configMap:
            name: server
            items:
              - key: sink.json
                path: sink.json
...
